--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,17 @@
 
   <!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
   <script src="/assets/js/main.js" type="text/javascript"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
+
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyDwqAxbVPSfWzsgpew27wAdtMv6P7m4am4",
+      databaseURL: "https://rockwotj-website.firebaseio.com",
+    };
+    firebase.initializeApp(config);
+  </script>
 
 
 </html>
