--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,53 @@ layout: default
         </div>
 
       </article>
+      <div class="comments-area">
+        <h3 class="text-center">Comments</h3>
+        <div class="comments">
+        </div>
+
+
+        <form class="form-horizontal">
+          <fieldset>
+            <!-- Textarea -->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="textarea">Message</label>
+              <div class="col-md-4">                     
+                <textarea class="form-control" id="message" name="textarea" required=""></textarea>
+              </div>
+            </div>
+
+            <!-- Text input-->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="name">Name</label>  
+              <div class="col-md-4">
+                <input id="name" name="name" type="text" placeholder="" class="form-control input-md" required="">
+
+              </div>
+            </div>
+
+            <!-- Text input-->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="email">Email</label>  
+              <div class="col-md-4">
+                <input id="email" name="email" type="email" placeholder="" class="form-control input-md" required="">
+
+              </div>
+            </div>
+
+            <!-- Button -->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="post"></label>
+              <div class="col-md-4">
+                <button id="post" name="post" class="btn btn-primary">Post Comment</button>
+              </div>
+            </div>
+
+          </fieldset>
+        </form>
+
+
+      </div>
       <div class="notice">
         <hr>
         <p>
